--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -1,19 +1,25 @@
+trigger:
+- main
+
 name: Azure Pipelines
 variables:
-  python.version: '3.7.13'
+  projectRoot: $(System.DefaultWorkingDirectory)
+  pythonVersion: '3.7.13'
+  poolName: 'myAgentPool'
+
 stages:
 - stage: Build
   jobs:
   - job: Build
     pool:
-      name: Hosted Ubuntu 1604
+      name: $(poolName)
     steps:
-    # Needed for Terraform VM deployment
-    # - task: InstallSSHKey@0
-    #   inputs:
-    #     knownHostsEntry: 'KNOWN_HOSTS_STRING'
-    #     sshPublicKey: 'PUBLIC_KEY'
-    #     sshKeySecureFile: 'id_rsa'
+#     Needed for Terraform VM deployment
+     - task: InstallSSHKey@0
+       inputs:
+         knownHostsEntry: 'KNOWN_HOSTS_STRING'
+         sshPublicKey: 'PUBLIC_KEY'
+         sshKeySecureFile: 'id_rsa'
     - task: ArchiveFiles@2
       displayName: 'Archive FakeRestAPI'
       inputs:
@@ -24,7 +30,8 @@ stages:
     - publish: $(Build.ArtifactStagingDirectory)/$(Build.BuildId)-fakerestapi.zip
       displayName: 'Upload Package'
       artifact: drop-fakerestapi
-- stage:
+
+- stage: Deployment
   jobs:
   - deployment: FakeRestAPI
     pool:
@@ -56,7 +63,7 @@ stages:
   #             targetType: 'inline'
   #             script: |
   #               #! /bin/bash
-                
+
   #               sudo apt-get upgrade -y
   #               sudo apt-get install python3-pip -y
   #               sudo apt-get install unzip -y
