--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -15,6 +15,8 @@ stages:
       - job: TerraformProvisionJob
         pool: $(poolName)
         steps:
+          - bash: ls $(terraform-working-directory)
+
           - task: TerraformTaskV2@2
             displayName: 'Init'
             inputs:
