Update azure-pipelines.yaml for Azure Pipelines

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -15,6 +15,7 @@ stages:
       - job: TerraformProvisionJob
         pool: $(poolName)
         steps:
+          - checkout: self
           - bash: ls $(System.DefaultWorkingDirectory)/terraform
 
           - task: TerraformTaskV2@2
