Update azure-pipelines.yaml for Azure Pipelines

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -28,7 +28,7 @@ stages:
               backendAzureRmResourceGroupName: 'Azuredevops'
               backendAzureRmStorageAccountName: 'tungstorage989'
               backendAzureRmContainerName: 'tungcontainer'
-              backendAzureRmKey: 'terraform.tfstate'
+              backendAzureRmKey: 'tf/terraform.tfstate'
 
           - task: TerraformTaskV2@2
             displayName: 'Apply'
