--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -23,6 +23,7 @@ stages:
             inputs:
               provider: 'azurerm'
               command: 'init'
+              commandOptions: '-reconfigure'
               workingDirectory: $(System.DefaultWorkingDirectory)/terraform
               backendServiceArm: '$(serviceConn)'
               backendAzureRmResourceGroupName: 'Azuredevops'
