--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -21,7 +21,7 @@ stages:
             inputs:
               provider: 'azurerm'
               command: 'init'
-              # commandOptions: '-reconfigure'
+              commandOptions: '-reconfigure'
               workingDirectory: $(System.DefaultWorkingDirectory)/terraform
               backendServiceArm: '$(serviceConn)'
               backendAzureRmResourceGroupName: 'Azuredevops'
