--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -112,8 +112,8 @@ stages:
       pool: $(poolName)
       steps:
       - script: |
-          npm install -g newman
-          npm install -g newman-reporter-junitfull
+          npm install newman
+          npm install newman-reporter-junitfull
           newman run "RegressionTest.postman_collection.json" -e MyEnv.postman_environment.json --reporters cli,junitfull --reporter-junitfull-export regression-test.xml
           newman run "DataValidationTest.postman_collection.json" -e MyEnv.postman_environment.json --reporters cli,junitfull --reporter-junitfull-export validation-test.xml
         workingDirectory: $(projectRoot)/automatedtesting/postman/
