Update azure-pipelines.yaml for Azure Pipelines

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -108,30 +108,30 @@ stages:
   - stage: Test
     displayName: Test stage
     jobs:
-    - job: PostmanTestJob
-      pool: $(poolName)
-      steps:
-      - task: NodeTool@0
-        displayName: Install Node v12.X
-        inputs:
-          versionSpec: '12.x'
-      - bash: |
-          npm install -g newman
-          npm install -g newman-reporter-junitfull
-          newman run "RegressionTest.postman_collection.json" -e MyEnv.postman_environment.json --reporters cli,junitfull --reporter-junitfull-export regression-test.xml
-          newman run "DataValidationTest.postman_collection.json" -e MyEnv.postman_environment.json --reporters cli,junitfull --reporter-junitfull-export validation-test.xml
-        workingDirectory: $(projectRoot)/automatedtesting/postman/
-        displayName: "Run Postman"
-      - task: PublishTestResults@2
-        inputs:
-          testResultsFormat: 'JUnit'
-          testResultsFiles: '$(projectRoot)/automatedtesting/postman/validation-test.xml'
-        displayName: 'Publish Data Validation Tests Result'
-      - task: PublishTestResults@2
-        inputs:
-          testResultsFormat: 'JUnit'
-          testResultsFiles: '$(projectRoot)/automatedtesting/postman/regression-test.xml'
-        displayName: 'Publish Regression Tests Result'
+    # - job: PostmanTestJob
+    #   pool: $(poolName)
+    #   steps:
+    #   - task: NodeTool@0
+    #     displayName: Install Node v12.X
+    #     inputs:
+    #       versionSpec: '12.x'
+    #   - bash: |
+    #       npm install -g newman
+    #       npm install -g newman-reporter-junitfull
+    #       newman run "RegressionTest.postman_collection.json" -e MyEnv.postman_environment.json --reporters cli,junitfull --reporter-junitfull-export regression-test.xml
+    #       newman run "DataValidationTest.postman_collection.json" -e MyEnv.postman_environment.json --reporters cli,junitfull --reporter-junitfull-export validation-test.xml
+    #     workingDirectory: $(projectRoot)/automatedtesting/postman/
+    #     displayName: "Run Postman"
+    #   - task: PublishTestResults@2
+    #     inputs:
+    #       testResultsFormat: 'JUnit'
+    #       testResultsFiles: '$(projectRoot)/automatedtesting/postman/validation-test.xml'
+    #     displayName: 'Publish Data Validation Tests Result'
+    #   - task: PublishTestResults@2
+    #     inputs:
+    #       testResultsFormat: 'JUnit'
+    #       testResultsFiles: '$(projectRoot)/automatedtesting/postman/regression-test.xml'
+    #     displayName: 'Publish Regression Tests Result'
 
     - job: JmeterTestJob
       pool: $(poolName)
