Update azure-pipelines.yaml for Azure Pipelines

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -140,10 +140,10 @@ stages:
           inputs:
             jmeterVersion: '5.4.2'
         - script: |
-            jmeter -n -t EnduranceTest.jmx -e -f -o endurance-html -l endurance-test-result.csv
+            jmeter -n -t EnduranceTest.jmx -e -f -o endurance-html-report -l endurance-test-result.csv
           workingDirectory: $(projectRoot)/automatedtesting/jmeter/
           displayName: "Run endurance test"
         - script: |
-            jmeter -n -t StressTest.jmx -e -f -o stress-html -l stress-test-result.csv
+            jmeter -n -t StressTest.jmx -e -f -o stress-html-report -l stress-test-result.csv
           workingDirectory: $(projectRoot)/automatedtesting/jmeter/
           displayName: "Run stress test"
